--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,18 +11,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
-    tools:targetApi="31">
+        <activity android:name=".MainActivity" />
+
+        tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ChoiceActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.HDate">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".SignupActivity" />
+
     </application>
 
 </manifest>
